--- a/package.json
+++ b/package.json
@@ -12,14 +12,11 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.2.0",
-    "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^9.5.0",
     "@supabase/supabase-js": "^2.57.4",
     "framer-motion": "^7.6.18",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "three": "^0.182.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
